--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ Primary use:
 
 /*---------------------------------------------*/
 .m2-txt1 {
-  font-family: 'Encode Sans Semi Expanded', sans-serif;
+  font-family: Poppins-Light;
   font-size: 16px;
   color: #999;
   line-height: 1.2;
@@ -210,7 +210,7 @@ Primary use:
 [ L-Text >= 26 ]*/
 .l1-txt1 {
   font-family: PlayfairDisplay-BlackItalic;
-  font-size: 90px;
+  font-size: 60px;
   color: #fff;
   line-height: 1.1;
 }
